--- a/dom/two.html
+++ b/dom/two.html
@@ -28,7 +28,13 @@
     // console.log(parent.firstElementChild);
     // console.log(parent.lastElementChild);
 
-    const dayOne = document
+    const dayOne = document.querySelector('.day')       // Gives only 1st value
+    console.log(dayOne);
+    console.log(dayOne.parentElement);      //Gives parent element
+    console.log(dayOne.nextElementSibling)  //Gives tuesday
+    
+    console.log("Nodes: ", parent.childNodes);
+
 
 
 </script>
